--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0"
+    "react-native-screens": "~3.20.0",
+    "expo-clipboard": "~4.1.2",
+    "@react-native-async-storage/async-storage": "1.17.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
